Adding database viewer.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
                   >
 
         </activity>
+        <activity android:name="com.smithkeegan.mydailyskincare.AndroidDatabaseManager"
+                  android:theme="@style/Theme.AppCompat.Light"/>
     </application>
 
 </manifest>
