--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DiaryEntryActivityMain"
+        <activity android:name=".diaryEntry.DiaryEntryActivityMain"
                   android:label="Entry"
                   android:parentActivityName=".CalendarActivityMain"
                   >
