Initial refactor commit. Pulled database query out of fragments and began implementation of MVVM structure. First run on IngredientFragmentMain

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
+    compile 'com.squareup.sqlbrite2:sqlbrite:2.0.0'
     compile 'com.roomorama:caldroid:3.0.1'
 }
