--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     compile 'com.android.support:design:25.0.1'
     compile 'com.squareup.sqlbrite2:sqlbrite:2.0.0'
     compile 'com.roomorama:caldroid:3.0.1'
+
+    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
