--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         -->
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_warning_black_24dp"
+        android:icon="@mipmap/icon_launcher"
 
         android:label="@string/app_name"
         android:supportsRtl="true"
